finished responsive design

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="app.css">
 </head>
 <body>
-    <div class="panel pricing-table">
+    <div class="panel">
     <div class="pricing-plan">
         <img src="/icons/icon1.png" alt="one person" class="pricing-img">
         <h2 class="pricing-header">Personal</h2>
