changed file structure

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="panel">
     <div class="pricing-plan">
-        <img src="/icons/icon1.png" alt="one person" class="pricing-img">
+        <img src="/icon1.png" alt="one person" class="pricing-img">
         <h2 class="pricing-header">Personal</h2>
         <ul class="pricing-features">
             <li class="pricing-features-item">Custom Domains</li>
@@ -22,7 +22,7 @@
     </div>
 
     <div class="pricing-plan">
-        <img src="/icons/icon2.png" alt="small group" class="pricing-img">
+        <img src="/icon2.png" alt="small group" class="pricing-img">
         <h2 class="pricing-header">Small Team</h2>
         <ul class="pricing-features">
             <li class="pricing-features-item">Never sleeps</li>
@@ -33,7 +33,7 @@
     </div>
 
     <div class="pricing-plan">
-        <img src="/icons/icon3.png" alt="large group" class="pricing-img">
+        <img src="/icon3.png" alt="large group" class="pricing-img">
         <h2 class="pricing-header">Enterprise</h2>
         <ul class="pricing-features">
             <li class="pricing-features-item">Dedicated</li>
